--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,11 @@ jobs:
       shell: bash
       run: |
         pushd Source/bjdChangeFeed001/
-        dotnet build --configuration Release --output ../../output
+        dotnet build --configuration Release 
         popd
 
     - name: 'Run Azure Functions Action'
       uses: Azure/functions-action@v1
       with:
         app-name: bjdaction001
-        package: './output'
+        package: './Source'
