--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,22 +4,6 @@ on: [push]
 
 jobs:
   build:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#    - uses: actions/checkout@v1
-#    - name: Setup dotnet
-#      uses: actions/setup-dotnet@v1
-#      with:
-#        dotnet-version: '2.2.103'
-#    - run: dotnet build ./Source/bjdChangeFeed001/CosmosDbChangeFeed.csproj
-#    - uses: Azure/functions-action@v1
-#      id: fa
-#      with:
-#         app-name: bjdaction001
-#         publish-profile: ${{ secrets.AZURE_CREDENTIALS }}
-#         package: './output'
-
    runs-on: ubuntu-latest
    steps:
     - name: 'Checkout GitHub Action'
@@ -38,12 +22,12 @@ jobs:
     - name: 'Run dotnet build'
       shell: bash
       run: |
-        pushd Source/bjdChangeFeed001/
-        dotnet build --configuration Release 
+        pushd Source
+        dotnet build --configuration Release --output=./ouput
         popd
 
     - name: 'Run Azure Functions Action'
       uses: Azure/functions-action@v1
       with:
         app-name: bjdaction001
-        package: './Source'
+        package: './Source/ouput'
