Changed from build to publish

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       shell: bash
       run: |
         pushd Source
-        dotnet build --configuration Release --output=./ouput
+        dotnet publish --configuration Release --output=./ouput
         popd
 
     - name: 'Run Azure Functions Action'
