--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,8 +2,8 @@ trigger:
 - master
 
 variables:
-  azureSubscription: $(subscriptionId)
-  functionAppName: $(functionName)
+  azureSubscription: '$(subscriptionId)'
+  functionAppName: '$(functionName)'
   vmImageName: 'vs2017-win2016'
   workingDirectory: '$(System.DefaultWorkingDirectory)/Source'
 
