--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 variables:
-  azureSubscription: '$(subscriptionId)'
+  azureSubscription: '15421089-60f2-4332-907d-297c294faa79'
   functionAppName: '$(functionName)'
   vmImageName: 'vs2017-win2016'
   workingDirectory: '$(System.DefaultWorkingDirectory)/Source'
